test/expected/declare_o_plus2_d_rk.out
struct S; declare ++ as operator (double) returning reference to S
                         ^
26: error: parameter of postfix operator ++ must be int
